      support in pristine-tar and git-buildpackage.
  * checks/conffiles.pm, checks/{debconf,files,scripts}.desc:
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to fix a
      number of spelling mistakes.  (Closes: #878446)
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to update
      a number of manual references.  (Closes: #878517)
  * checks/debconf.desc:
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to update
      the debconf-spec refs.  (Closes: #878449)
  * checks/debhelper.{desc,pm}:
    + [NT] Add check for using using the debhelper tooling from the
      autotools-dev package.  These have been replaced by the changes
      inside debhelper itself.
    + [NT] Avoid useless-autoreconf-build-depends for autotools-dev when
      the autotools-dev tooling is used in debian/rules.
      (Closes: #871711)
  * checks/fields.pm:
    + [CL] Apply patch from Nicolas Boulenguez to accept and recommend the
      new vcs-mtn mtn:// uri format.  (Closes: #878798)
    + [CL] Emit new empty-section-field tag instead of uninitialized value
      warnings on an empty "Section:" field.  (Closes: #878515)
  * checks/init.d.pm:
    + [CL] Check for files that use content from the /etc/init.d/skeleton
      template. Thanks to Christoph Biedl for the idea.  (Closes: #879152)
  * checks/md5sums.pm:
    + [CL] Allow empty md5sums files.  (Closes: #781372)
  * checks/rules.{pm,desc}:
    + [CL] Warn on packages unnecessararily setting dpkg-architecture(1)
      variables.  (Closes: #793554)
  * checks/source-changelog.{desc.pm}:
    + [CL] Move latest-debian-changelog-entry-without-new-date tag into a
      new check of type "source".  (Closes: #873612)
  * checks/watch-file.pm:
    + [CL] Include the offending URI in debian-watch-uses-insecure-uri
      output, not the line number.
    + [CL] Ignore the magic http://sf.net/ redirector URI for the
      debian-watch-uses-insecure-uri tag.  (Closes: #879206)
