@@ -1,0 +1,6 @@
+Testname: cruft-file-contains-trailing-whitespace
+Version: 1.0
+Description: Check for files containing trailing whitespace characters
+Options: -I -E --pedantic
+Test-For:
+ file-contains-trailing-whitespace
